Minor fix on firefox browser styling view.

--- a/static/css/quien-compro.css
+++ b/static/css/quien-compro.css
@@ -202,7 +202,7 @@ input#id_address1_nint {
     float: left;
     margin-top: -37px;
     margin-left: 130px;
-    position: absolute;
+    /* position: absolute; */
 }
 input#same-as-above-address {
     z-index: 999999;
@@ -222,10 +222,10 @@ input#id_address1_municipio_o_delegacion {
     /* float: left; */
 }
 input#id_address1_codigo_postal {
-    margin-top: -75px;
     float: left;
     width: 265px;
     position: absolute;
+    margin-top: -54px;
 }
 input#id_address1_estado {
     margin-top: -110px;
@@ -241,12 +241,12 @@ input#id_address2_domiscilio_fiscal_del_emisor {
     display:none;
 }
 input#id_address2_nnext {
-float: right; margin-top: 14px; width: 125px; position: absolute; margin-left: -489px;}
+float: right; margin-top: 7px; width: 125px; /* position: absolute; */ margin-right: 228px;}
 input#id_address2_nint {
     width: 137px;
-    float: right;
+    float: left;
     margin-top: -21px;
-    margin-right: 229px;
+    /* margin-right: 229px; */
 }
 input#id_address2_colonia{
     width: 219px;
@@ -840,4 +840,15 @@ a#cant-undo-first-address {
 .tooltip-inner{
     width:200px !important;
     opacity:1 !important;
+}
+
+
+@-moz-document url-prefix() {
+    input#id_address1_codigo_postal{
+        margin-top:-74px;
+    }
+    input#id_address2_nnext{
+        margin-top:-6px;
+
+    }
 }
